--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,6 @@ h1 {
   border-radius: 1rem;
   height: 3.5rem;
   width: 100%;
-  border: none;
 }
 
 .flex {
@@ -449,6 +448,12 @@ input:hover {
 .info-establecimiento-detallado {
   line-height: 3.5rem;
   font-size: 2.4rem;
+}
+
+/* CLASES AGREGADAS CON JS */
+
+.inputError {
+  border: 2px solid red;
 }
 
 /*
